Fix spacing of two date form fields in search UI

--- a/assets/css/uzerp/forms.less
+++ b/assets/css/uzerp/forms.less
@@ -126,6 +126,12 @@
 		li span {
 			padding-bottom: 5px;
 		}
+
+		li span.search-twofield-sep {
+			padding: 0 5px;
+			float: left;
+			line-height: 22px;
+		}
 	
 	}
 	
